fix navigation head bleed

--- a/bbf_organizr.css
+++ b/bbf_organizr.css
@@ -136,11 +136,18 @@ div#internal-Settings {
 }
 
 #side-menu {
-	padding-top: 40px;
+	padding-top: 0px;
 }
 
 .sidebar-nav {
-	background-color: rgba(0, 0, 0, 0.2);
+	background: rgba(0,0,0,.0);
+	background-color: rgba(0,0,0,.0);
+	margin-top: 40px;
+	padding-bottom: 40px;
+}
+
+.slimScrollDiv {
+	background-color: rgba(0,0,0,0.2);
 }
 
 .navbar-default.sidebar {
